# PoissonPDE_2DSolve_MPI

./: .gitignore  CMakeLists.txt  Run_It.sh
python/: PDE_Sol_Plot.py
src/: int_funcs.cpp  int_funcs.h  main.cpp
